--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
   <div class="content">
     <h1>Welcome to the UNDERGROUND</h1>
     <div class="buttons">
-      <a href="#page1">Page 1</a>
-      <a href="#page2">Page 2</a>
+      <a href="#page1">BlockBlast</a>
+      <a href="#page2">Brutality</a>
       <a href="#page3">Page 3</a>
     </div>
   </div>
