--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <div class="content">
     <h1>Welcome to the UNDERGROUND</h1>
     <div class="buttons">
-      <a href="#page1">BlockBlast</a>
+      <a href="block">BlockBlast</a>
       <a href="#page2">Brutality</a>
       <a href="#page3">Page 3</a>
     </div>
