--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <h1>Welcome to the UNDERGROUND</h1>
     <div class="buttons">
       <a href="block">BlockBlast</a>
-      <a href="#page2">Brutality</a>
+      <a href="brutality">Brutality</a>
       <a href="#page3">Page 3</a>
     </div>
   </div>
