--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="buttons">
       <a href="block">BlockBlast</a>
       <a href="brutality">Brutality</a>
-      <a href="#page3">Page 3</a>
+      <a href="Pacman">Pacman</a>
     </div>
   </div>
 
