--- a/Pacman.html
+++ b/Pacman.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <title>Pac-Man</title>
   <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+    }
     body {
       background: black;
       display: flex;
@@ -17,7 +21,7 @@
     #game {
       display: grid;
       grid-template-columns: repeat(20, 25px);
-      grid-template-rows: repeat(20, 25px);
+      grid-template-rows: repeat(11, 25px);
     }
     .wall {
       background: blue;
@@ -38,7 +42,10 @@
       border-radius: 50%;
       width: 8px;
       height: 8px;
-      margin: auto;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
     .cell {
       width: 25px;
@@ -94,17 +101,111 @@
         if (type === 0) cell.innerHTML = '<div class="dot"></div>';
         game.appendChild(cell);
       });
-      document.querySelectorAll('.cell')[pacmanIndex].classList.add('pacman');
+      updateCharacters();
+    }
+
+    function updateCharacters() {
+      const cells = document.querySelectorAll('.cell');
+      if (cells[pacmanIndex]) cells[pacmanIndex].classList.add('pacman');
       ghostData.forEach(g => {
-        if (g.index >= 0 && g.index < width * width) {
-          document.querySelectorAll('.cell')[g.index].classList.add('ghost', g.class);
+        if (cells[g.index]) {
+          cells[g.index].classList.add('ghost', g.class);
         }
       });
     }
 
     function movePacman(e) {
       const cells = document.querySelectorAll('.cell');
+      if (!cells[pacmanIndex]) return;
       cells[pacmanIndex].classList.remove('pacman');
       let nextIndex = pacmanIndex;
 
-      if (e.key === 'ArrowLeft' && pacmanIndex % width !== 0 && !cells[pacmanIndex - 1].classList.contains(
+      if (e.key === 'ArrowLeft' && pacmanIndex % width !== 0 && !cells[pacmanIndex - 1].classList.contains('wall'))
+        nextIndex = pacmanIndex - 1;
+      else if (e.key === 'ArrowRight' && pacmanIndex % width < width - 1 && !cells[pacmanIndex + 1].classList.contains('wall'))
+        nextIndex = pacmanIndex + 1;
+      else if (e.key === 'ArrowUp' && pacmanIndex - width >= 0 && !cells[pacmanIndex - width].classList.contains('wall'))
+        nextIndex = pacmanIndex - width;
+      else if (e.key === 'ArrowDown' && pacmanIndex + width < layout.length && !cells[pacmanIndex + width].classList.contains('wall'))
+        nextIndex = pacmanIndex + width;
+
+      pacmanIndex = nextIndex;
+      if (cells[pacmanIndex]) {
+        const dot = cells[pacmanIndex].querySelector('.dot');
+        if (dot) {
+          dot.remove();
+          score += 10;
+          scoreDisplay.textContent = `Score: ${score} | Lives: ${lives} | Level: ${level}`;
+          if (!document.querySelector('.dot')) {
+            level++;
+            score += 100;
+            resetLevel();
+          }
+        }
+
+        if (isGhost(pacmanIndex)) loseLife();
+
+        cells[pacmanIndex].classList.add('pacman');
+      }
+    }
+
+    function isGhost(index) {
+      return ghostData.some(g => g.index === index);
+    }
+
+    function moveGhosts() {
+      const cells = document.querySelectorAll('.cell');
+      ghostData.forEach(g => {
+        if (cells[g.index]) {
+          cells[g.index].classList.remove('ghost', g.class);
+        }
+
+        const directions = [-1, 1, -width, width];
+        const shuffled = directions.sort(() => 0.5 - Math.random());
+        for (let dir of shuffled) {
+          const next = g.index + dir;
+          if (
+            next >= 0 &&
+            next < layout.length &&
+            !cells[next].classList.contains('wall') &&
+            !cells[next].classList.contains('ghost')
+          ) {
+            g.index = next;
+            break;
+          }
+        }
+
+        if (cells[g.index]) {
+          cells[g.index].classList.add('ghost', g.class);
+          if (g.index === pacmanIndex) loseLife();
+        }
+      });
+    }
+
+    function loseLife() {
+      lives--;
+      if (lives <= 0) {
+        alert('Game Over!');
+        location.reload();
+      } else {
+        alert(`You lost a life! Lives left: ${lives}`);
+        resetLevel();
+      }
+    }
+
+    function resetLevel() {
+      pacmanIndex = 21;
+      ghostData[0].index = 188;
+      ghostData[1].index = 169;
+      ghostData[2].index = 230;
+      ghostData[3].index = 147;
+      scoreDisplay.textContent = `Score: ${score} | Lives: ${lives} | Level: ${level}`;
+      createBoard();
+    }
+
+    document.addEventListener('keydown', movePacman);
+    createBoard();
+    setInterval(moveGhosts, 500);
+  </script>
+</body>
+</html>
